# Orion-Sapienform

./: .env  .env_example  .gitattributes  .gitignore  .gitnexusignore  2026-07-11-turn-visibility-design-spec.md  AGENTS.md  CLAUDE.md  MIGRATION_GUIDE.md  Makefile  PR-DESC.md  PR_BODY.md  PR_BRIDGE_CALLSYNE_INTEGRATION.md  PR_DESCRIPTION.md  PR_HUB_MIND_MEMORY_GRAPH.md  PR_HUB_MIND_TAB.md  PR_MEMORY_CRYSTALLIZATION_V1.md  PR_REPAIR_PRESSURE_V1.md  PR_SUBSTRATE_GRAPH_MVP.md  PR_embodiment_latest_line_grounding.md  PR_embodiment_speech_repeat_guard.md  PR_repair_pressure_speech_wiring.md  PR_repair_pressure_v2_pre_turn_appraisal.md  PR_repair_pressure_v2_trace_and_fleet.md  PR_reverie_phase_a.md  PR_social_stored_consumer_resilience.md  PR_substrate_rung6_self_revision_tick.md  PR_vision_belief_production_tuning.md  PR_vision_council_evidence_transition.md  PR_vision_scene_belief.md  README.md  TESTING_CHECKLIST.md  llamacpp_profile_investigation.md  migrations.sql  postflight.md  pyproject.toml  requirements-dev.txt  requirements.txt  smoke_test.json  venv
orion/cognition/: Makefile  README.md  __init__.py  agent_chain_guards.py  answer_contract_normalize.py  answer_grounding.py  cli.py  cortex_payload_extract.py  delivery_grounding.py  fast_chat_verbs.py  finalize_payload.py  findings_bundle_synth.py  output_mode_classifier.py  packs_loader.py  plan_loader.py  projection.py  projection_builder.py  projection_context.py  pyproject.toml  quality_evaluator.py  recall_prefetch.py  recall_query.py  runtime_pack_merge.py  skills_manifest.py  verb_activation.py  verb_catalog.py
orion/cognition/change_logs/: metacog_v2.md
orion/cognition/chat_history_compactor/: __init__.py  constants.py  digest.py  window.py
orion/cognition/compactor/: README.md  __init__.py  budget.py  digest.py  index.py
orion/cognition/docs/: unified_cognitive_substrate_buildout.md
orion/cognition/github_compactor/: __init__.py  constants.py  digest.py
orion/cognition/hub-gateway/: README.md
orion/cognition/hub_gateway/: bus_harness.py
orion/cognition/ontology/: metacog_trace.ttl  orion_cognition_ontology.ttl
orion/cognition/packs/: delivery_pack.yaml  emergent_pack.yaml  executive_pack.yaml  memory_pack.yaml
orion/cognition/personality/: __init__.py  identity_context.py  orion_identity.yaml
orion/cognition/planner/: __init__.py  loader.py  models.py  planner.py  prompt_renderer.py  rdf_sync.py
orion/cognition/prompts/: analyze_text_prompt.j2  answer_direct_prompt.j2  assess_risk_prompt.j2  auto_depth_select_prompt.j2  auto_route_prompt.j2  chat_agent_prompt.j2  chat_deep_graph.j2  chat_general.j2  chat_history_compactor_digest_v1.j2  chat_kids_story.j2  chat_quick.j2  chat_social_room.j2  chat_stance_brief.j2  compare_options_prompt.j2  concept_induction_journal_synthesize.j2  concept_induction_prompt.j2  counterfactual_prompt.j2  daily_metacog_prompt.j2  daily_pulse_prompt.j2  dream_cycle.j2  dream_preprocess_prompt.j2  dream_simple.j2  evaluate_prompt.j2  extract_facts_prompt.j2  finalize_response_prompt.j2  generate_code_scaffold_prompt.j2  github_compactor_digest_v1.j2  goal_formulate_prompt.j2  harness_finalize_reflect.j2  introspect_spark.j2  introspection_prompt.j2  journal_compose_prompt.j2  log_collapse_mirror.j2  log_orion_metacognition_draft.j2  log_orion_metacognition_enrich.j2  memory_card_annotation_prompt.j2  memory_graph_suggest_prompt.j2  orion_voice_finalize.j2  pattern_detect_prompt.j2  perceive_caption_frame.j2  (+29 more)
orion/cognition/schemas/: verb.schema.json
orion/cognition/tests/: rdf_sync.py  test_agent_chain_guards.py  test_answer_contract_normalize.py  test_answer_grounding_discord.py  test_daily_metacog_prompt.py  test_delivery_grounding.py  test_dream_contracts.py  test_finalize_payload.py  test_findings_bundle_synth.py  test_live_tool_resolution_pass2.py  test_packs.py  test_planner.py  test_projection.py  test_projection_builder.py  test_projection_context.py  test_projection_starvation_diagnostics.py  test_quality_evaluator.py  test_quality_evaluator_claims.py  test_recall_fusion.py  test_recall_prefetch.py  test_recall_profiles.py  test_recall_render_lane_separation.py  test_recall_sql_timeline_projection.py  test_reflect_recall_integration.py  test_runtime_pack_merge.py  verb_configs.py
orion/cognition/tools/: generate_rdf.py  list_packs.py  show_packs.py
orion/cognition/verbs/: actions.respond_to_juniper_collapse_mirror.v1.yaml  active.yaml  analyze_text.yaml  answer_current_datetime.yaml  answer_direct.yaml  assess_mesh_presence.yaml  assess_risk.yaml  assess_runtime_state.yaml  assess_storage_health.yaml  auto_depth_select.yaml  auto_route.yaml  chat_agentic.yaml  chat_deep_graph.yaml  chat_general.yaml  chat_history_compactor_digest_v1.yaml  (+87 more)
services/orion-llm-client/: Dockerfile  LICENSE  README.md  pyproject.toml
(+5418 files in other folders)
