[project]
name = "orion"
version = "0.1.0"
description = "Emergent AI System Repo"
authors = [
    {name = "orion", email = "orion@orion.com"},
    {name = "Juniper Feld", email = "june.d.feld@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.4"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "chromadb (>=1.0.12,<2.0.0)",
    "sqlalchemy (==2.0.41)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "rdflib (>=7.1.4,<8.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "redis[hiredis] (>=6.2.0,<7.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "opencv-contrib-python (>=4.11.0.86,<5.0.0.0)",
]

[tool.poetry]
packages = [{include = "orion", from = "src"}]

[tool.poetry.dependencies]
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
