[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-cognition"
version = "0.1.0"
description = "Orion's cognitive planning & semantic layer."
authors = [{ name = "Juniper Feld" }]
dependencies = [
    "pyyaml",
    "jinja2",
    "requests",
]

[tool.setuptools]
# Tell setuptools: there is ONE logical package called "orion_cognition"
packages = ["orion_cognition"]

[tool.setuptools.package-dir]
# Map that logical package name to THIS directory (.)
orion_cognition = "."
