[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "orion-llm-client"
version = "0.1.0"
description = "Python client for the Orion Brain Service (Ollama router)"
authors = [
    { name = "Orion", email = "orion@conjourney.net" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27.0,<0.28.0",
    "typing_extensions>=4.7.0,<5.0.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["orion_llm_client"]

