[project]
name = "orion-aitown-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.0.0",
]

[project.scripts]
orion-aitown-mcp = "orion_aitown_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["orion_aitown_mcp*"]
